display correct arrow alignment in expand row in month table

--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -30,6 +30,9 @@ button > i.bi {
     margin-right: 0.25rem;
 }
 
+.btn.btn-xs.no-hover {
+    text-align: left;
+}
 
 /*
                                                                     Top Menu
